# spanIQ

./: .env.example  .gitignore  BENCHMARK_ACCURACY.md  BENCHMARK_METHODOLOGY.md  CHANGELOG.md  README.md  pyproject.toml  spaniq_demo_injection.db  spaniq_demo_rag.db  spaniq_demo_swap.db  test_diag.db
.github/workflows/: ci.yml
BuildPlan/: v1.md
benchmarks/: README.md  config.py  run_benchmark.py
benchmarks/analysis/: calibrate.py  metrics.py  report.py  report_accuracy.py  variance.py
benchmarks/datasets/: LABELING.md  build_labeled.py  fetch.py  qa_factual.jsonl  rag_retrieval.jsonl  rag_retrieval_seed.jsonl  summarization.jsonl
benchmarks/results/: results.json  summary.md
benchmarks/results_accuracy/: accuracy.csv  accuracy_summary.md  predictions.csv
benchmarks/runners/: _cost.py  deepeval_runner.py  groq_runner.py  langfuse_runner.py  ragas_runner.py  spaniq_runner.py
docs/: ATTRIBUTION.md  DEEPEVAL_MIGRATION.md  METRICS.md  WHY.md  dashboard.md  otel-integration.md  quickstart.md
docs/decisions/: changepoint-on-scores.md  cluster-and-tiebreak-ranking.md  cusum-vs-bocpd.md  pelt-penalty-calibration.md  stateless-metrics-violation.md  temporal-not-causal.md
docs/plans/: benchmark_methodology.md  benchmark_runners_plan.md  benchmark_v2_accuracy.md  v2.md  v3.md  v4.md
docs/versions/: v0.3.0.md  v1.md  v2.md  v4.md
examples/: customer_chatbot.py  quickstart.py  rag_pipeline.py
src/spaniq/: __init__.py
src/spaniq/attribution/: attributor.py  component.py  pipeline_monitor.py  report.py
src/spaniq/attribution/changepoint/: calibrate.py  cusum.py  pelt.py
src/spaniq/cli/: runner.py
src/spaniq/core/: eval_result.py  evaluate.py  test_case.py
src/spaniq/dashboard/: app.py  config.py
src/spaniq/dashboard/components/: filters.py  health_badge.py  metric_chart.py
src/spaniq/dashboard/pages/: alert_log.py  attribution.py  drift_timeline.py  overview.py
src/spaniq/demos/: _gen_cascade_fixtures.py  _gen_fixtures.py  cascade_pipeline.py  generate_outputs.py  model_swap.py  prompt_injection.py  rag_breakage.py
src/spaniq/demos/fixtures/cascade/: traces.jsonl
src/spaniq/demos/fixtures/model_swap/: baselines.json  traces_70b.jsonl  traces_8b.jsonl
src/spaniq/demos/fixtures/prompt_injection/: baselines.json  traces_injected.jsonl  traces_normal.jsonl
src/spaniq/demos/fixtures/rag_breakage/: baselines.json  traces_no_context.jsonl  traces_with_context.jsonl
src/spaniq/demos/output/: model_swap_alerts.jsonl  model_swap_report.txt  model_swap_traces.jsonl  prompt_injection_alerts.jsonl  prompt_injection_report.txt  prompt_injection_traces.jsonl  rag_breakage_alerts.jsonl  rag_breakage_report.txt  rag_breakage_traces.jsonl
src/spaniq/metrics/: __init__.py  base.py  consistency.py  output_stability.py  response_drift.py  semantic_similarity.py
src/spaniq/monitor/: __init__.py  alerting.py  baseline_store.py  monitor.py  timeline_store.py  trace.py  visualize.py
src/spaniq/monitor/collectors/: base.py  file.py  langfuse.py  otel.py  sdk.py
src/spaniq/reporting/: cost_report.py
src/spaniq/statistical/: embeddings.py  js.py  ks.py  psi.py
tests/: test_alerting.py  test_attribution_report.py  test_attributor.py  test_baseline_store.py  test_benchmark_accuracy_runner.py  test_benchmark_calibrate.py  test_benchmark_metrics.py  test_benchmark_report_accuracy.py  test_benchmark_runners.py  test_calibrate.py  test_cli.py  test_collectors.py  test_component.py  test_consistency.py  test_cost_report.py  test_cusum.py  test_dashboard_alerts.py  test_dashboard_attribution.py  test_dashboard_drift.py  test_dashboard_overview.py  test_e2e_attribution.py  test_e2e_benchmark.py  test_e2e_monitor.py  test_e2e_otel_to_dashboard.py  test_embeddings.py  test_evaluate.py  test_js.py  test_ks.py  test_monitor.py  test_otel_collector.py  test_otel_genai_mapping.py  test_otel_generic_mapping.py  test_output_stability.py  test_pelt.py  test_pipeline_monitor.py  test_psi.py  test_response_drift.py  test_semantic_similarity.py  test_smoke.py  test_test_case.py  (+4 more)
validation/: run_validation.py  synthetic_series.py
validation/results/: attribution_accuracy.csv  config.json  delay_localization.csv  summary.md
