[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spaniq"
version = "0.1.0"
description = "Deterministic LLM evaluation without LLM-as-judge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Himanshu", email = "im.furyfist@gmail.com" }]
keywords = ["llm", "evaluation", "testing", "observability", "deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
langfuse = ["langfuse>=4.0.0"]
groq = ["groq>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8.0",
]

[project.scripts]
spaniq = "spaniq.cli.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spaniq"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
